--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
         run: echo "version=$(cat version.txt)" >> $GITHUB_OUTPUT
 
       - name: Zip plugin
-        run: zip -r ithemes-security-pro-${{ steps.read_file.outputs.version }}.zip ./src
+        run: zip -r ithemes-security-pro-${{ steps.read_file.outputs.version }}.zip src
 
       - name: Release
         uses: softprops/action-gh-release@v2
